fix footer spacing

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,7 +26,7 @@
 .footer {
     width : 100%;
     text-align: center;
-    min-height: 15px;
     background-color: rgb(250,250,250);
     color: rgb(100, 100, 100);
 }
+.footer h4 { margin-top: 10px;}
